--- a/online-zoo/assets/styles/global.css
+++ b/online-zoo/assets/styles/global.css
@@ -29,12 +29,12 @@ body {
   border-radius: 25px;
   background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
   padding: 0;
-  width: 300px;
+  width: 18.7rem;
   max-width: 100%;
-  height: 55px;
+  height: 3.4rem;
   color: #ffffff;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 140%;
   text-align: center;
   text-transform: uppercase;
@@ -99,8 +99,12 @@ body {
 .nav__link:first-child {
   margin-left: 0;
 }
-.nav__link:last-child {
-  padding-left: 350px;
+.header__nav {
+  width: 100%;
+}
+.header__nav .nav__link:last-child {
+  float: right;
+  
 }
 .nav__link:hover {
   color: #fe9013;
@@ -115,14 +119,50 @@ body {
   display: flex;
   position: absolute;
   top: 46px;
-  bottom: -190px;
   left: 0;
   flex-direction: column;
-  background-color: #000000;
+  background-color: rgba(37, 37, 23, 0.7);
   width: 100%;
 }
 .header__nav-active .nav__link {
   margin: 10px 0 10px 40px;
+}
+.header__burger {
+  display: none;
+  height: 2px;
+  width: 18px;
+  top: 15px;
+  right: 20px;
+  border-radius: 2px;
+  position: absolute;
+  cursor: pointer;
+}
+.header__burger::before,
+.header__burger::after{
+  content: "";
+  position: absolute;
+  background: #ffffff;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  border-radius: 2px;
+}
+.header__burger::before {
+  top: -300%;
+}
+.header__burger::after {
+  top: 300%;
+}
+.header__burger-active{
+  background: rgba(223, 21, 21, 0);
+}
+.header__burger-active::before {
+  transform: rotate(45deg);
+  top: 0;
+}
+.header__burger-active::after {
+  transform: rotate(-45deg);
+  top: 0;
 }
 
 /* ===== footer ===== */
@@ -288,4 +328,172 @@ body {
 .email__field:focus:invalid + .email__btn {
   border: 1px solid #d31414;
   color: #d31414;
+}
+
+
+/*----------- Adaptive Header ---------*/
+@media (max-width: 1000px) {
+  .nav__link {
+    margin-left: 3rem;
+    font-weight: 500;
+    line-height: 22px;
+  }
+}
+@media (max-width: 840px) {
+  .header {
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    z-index: 1000;
+  }
+  .header__burger {
+    display: inline-block;
+  }
+  .header__inner {
+    justify-content: space-between;
+  }
+  .header__nav {
+      display: none;
+  }
+  .burger {
+    display: block;
+  }
+  .header__logo {
+    font-size: 12px;
+    border: none;
+    margin: 0px;
+  }
+
+
+  /* ------------Adaptive footer ---------- */
+@media (max-width:1200px) {
+  .footer__nav > .nav__link:last-child {
+    margin-left: 48px;
+    padding-right: 88px;
+  }
+}
+@media (max-width: 840px) {
+  .footer {
+    padding: 12px 0px 12px;
+  }
+  .footer .container {
+    padding: 0px 20px;
+    max-width: 980px;
+  }
+  .footer__soc {
+      position: absolute;
+      top: 0px;
+      right: 0px;
+  }
+  .footer__email {
+      display: none;
+  }
+  .social__link {
+      font-size: 0px;
+  }
+  .social__link::before {
+      left: 12px;
+  }
+  .social__item {
+      margin-bottom: 30px;
+  }
+  .footer__nav {
+      justify-content: space-between;
+  }
+  .footer__nav .nav__link:last-child {
+    margin: 0;
+    padding: 0;
+  }
+  .footer__nav .nav__link {
+      margin-left: 0px;
+  }
+  .footer__links {
+      margin-left: 73px;
+  }
+  .footer__btn {
+      margin-top: 32px;
+      margin-bottom: 67px;
+  }
+  .footer__logo {
+      margin: 0px;
+  }
+}
+
+@media (max-width:720px) {
+  .soc__link {
+    font-size: 0;
+    margin-bottom: 25px;
+  }
+}
+}
+
+@media (max-width: 570px) {
+  .container {
+    padding: 0 10px;
+    }
+  }
+
+@media (max-width: 500px) {
+  .footer {
+    padding: 20px 0px 30px;
+  }
+  .footer__inner {
+    align-items: center;
+  }
+  .footer__top {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer__logo {
+    width: 136px;
+    border: none;
+    margin-bottom: 85px;
+  }
+  .footer__logo::before {
+    content: "";
+    position: absolute;
+    background-image: url("../icons/bamboo.svg");
+    background-repeat: no-repeat;
+    top: -3px;
+    left: 75px;
+    height: 20px;
+    width: 20px;
+    z-index: 1000;
+  }
+  .footer__bottom {
+    flex-direction: column-reverse;
+    align-items: center;
+    width: 100%;
+  }
+  .footer__btn {
+    margin: 0 auto 30px;
+  }
+  .footer__links {
+    margin-bottom: 40px;
+    margin-left: 0px;
+  }
+  .footer__nav {
+    width: 100%;
+    justify-content: space-between;
+  }
+  .footer__nav > .nav__link {
+    margin-right: 25px;
+    font-weight: normal;
+  }
+  .footer__nav > .nav__link:last-child {
+    margin-right: 0px;
+  }
+  .footer__soc {
+    display: flex;
+    top: 47px;
+    right: 50%;
+    transform: translateX(50%);
+  }
+  .soc__item {
+    margin-bottom: 0px;
+    margin-right: 30px;
+  }
+  .footer__title {
+    text-align: center;
+  }
 }
