--- a/online-zoo/pages/donate/donate.css
+++ b/online-zoo/pages/donate/donate.css
@@ -3,7 +3,7 @@
 
 .donate {
   position: relative;
-  width: 1600px;
+  width: 100%;
   background: linear-gradient(
       315.75deg,
       rgba(254, 210, 144, 0.7) 30.06%,
@@ -30,18 +30,11 @@
 
 .donate__foto {
   height: 390px;
-  height: 390px;
-  width: 1600px;
+  min-width: 100%;
   background: url('../../assets/images/Giant-Panda.png') center no-repeat;
   margin-bottom: 40px;
 }
 
-.container {
-  width: 100%;
-  max-width: 1220px;
-  margin: 0 auto;
-  padding: 0px 30px;
-}
 .donate__content {
   padding-top: 40px;
   margin: auto;
@@ -79,14 +72,11 @@
   color: #fe9013;
   margin: 40px 0 60px;
 }
-
 .feed {
-}
-.feed__inner {
   background: rgba(255, 255, 255, 0.52);
   backdrop-filter: blur(4px);
   border-radius: 20px;
-  padding: 40px 92px 62px;
+  padding: 40px 60px 62px;
 }
 
 .feed__title {
@@ -129,6 +119,7 @@
   left: 385px;
   top: 297px;
   border-radius: 0px;
+  margin: 0 10px;
 }
 .feed__vidget {
   margin-left: 64px;
@@ -253,6 +244,7 @@
   margin-bottom: 40px;
 }
 .radio__item {
+  margin: 0 30px;
 }
 .radio__input {
   z-index: 1000;
@@ -315,7 +307,7 @@
   margin-bottom: 20px;
   width: 268px;
   height: 54px;
-  background: transparent url(../../assets/icons/dollar.svg) 96% center no-repeat;
+  background: transparent url("../../assets/icons/dollar.svg") 96% center no-repeat;
   font-weight: normal;
   font-size: 16px;
   line-height: 140%;
@@ -333,4 +325,207 @@
   text-align: center;
   margin-top: 30px;
   text-decoration: none;
+}
+
+/*_______ Adaptive________ */
+@media (max-width: 1000px) {
+  .linear__item:first-child {
+      display: none;
+  }
+  .feed {
+    padding: 40px 30px 62px;
+  }
+}
+@media (max-width: 890px) {
+  .donate {
+      padding-bottom: 46px;
+  }
+  .feed {
+    padding: 30px 0;
+  }
+  .feed .container {
+    padding: 0;
+  }
+  .feed__content {
+      margin-top: 90px;
+  }
+  .donate__foto {
+      background: url("../../assets/images/panda_bgdonate.png") 35% no-repeat;
+      height: 335px;
+      margin-bottom: 30px;
+  }
+  .donate__title {
+      font-size: 24px;
+      line-height: 120%;
+  }
+  .donate__text {
+      margin: 20px 0px 30px;
+      font-weight: 400;
+  }
+  .donate__subtitle {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 36px;
+      line-height: 130%;
+      margin-bottom: 30px;
+  }
+  .feed__interactive {
+    width: 100%;
+  }
+  .feed__text {
+      text-align: center;
+      max-width: 600px;
+      margin-left: 30px;
+  }
+  .linear__text {
+      margin: 40px 0px 10px 10px;
+  }
+  .linear__item:nth-child(2),
+  .linear__item:nth-child(3) {
+      display: none;
+  }
+  .donate__another {
+      margin: 82px 0px 40px 10px;
+  }
+  .donate__period {
+      margin-bottom: 30px;
+  }
+}
+@media (max-width: 766px) {
+  .donate {
+      margin-top: 48px;
+  }
+}
+
+@media (max-width: 640px) {
+  .container {
+    padding: 0 20px;
+  }
+  .feed__content {
+    margin-right: 50px;
+    justify-content: space-between;
+  }
+  .feed__content .feed__text {
+    font-size: 16px;
+  }
+  .feed__text {
+    font-size: 24px;
+  }
+  .feed__vidget {
+    height: 198px;
+    width: 268px;
+  }
+}
+@media (max-width: 580px) {
+  .donate__photo {
+      height: 187px;
+  }
+  .donate__title-info {
+      font-size: 24px;
+      line-height: 120%;
+  }
+  .feed__content {
+    margin: 50px 15px 0;
+  }
+  .feed__title {
+      font-size: 24px;
+      margin-bottom: 10px;
+  }
+  .feed__text {
+      font-size: 16px;
+      line-height: 140%;
+      margin: 0 10px 0 15px;
+  }
+  .feed__content .feed__text {
+      font-size: 10px;
+      line-height: 140%;
+  }
+  .feed__number {
+      font-size: 40px;
+      line-height: 80%;
+  }
+  .feed__vidget {
+    margin: 0;
+  }
+  .feed__icon {
+      width: 8px;
+      height: 8px;
+  }
+  .donate__range {
+      padding: 0px 17px;
+  }
+  .interactive__amount {
+      margin: 70px 0px 30px;
+      width: 180px;
+      height: 42px;
+  }
+}
+
+@media (max-width: 490px) {
+  .container {
+    padding: 0 10px;
+  }
+  .donate {
+    padding-bottom: 20px;
+  }
+  .donate__subtitle {
+    margin: 30px 0;
+  }
+  .feed {
+    padding: 20px 0;
+  }
+  .feed__content {
+    margin: 36px 0 0;
+  }
+  .feed__vidget {
+    margin-left: 0;
+  }
+  .feed__icon {
+    margin: 0 36px;
+  }
+  .feed__text {
+    margin: 0;
+    text-align: center;
+  }
+  .linear__label {
+    font-size: 13px;
+  }
+  .linear-sign {
+    font-size: 13px;
+  }
+  .linear__input {
+    width: 20px;
+    height: 20px;
+  }
+  .linear__input:checked ~ .linear__label::before {
+    top: -22px;
+  }
+  .linear__decor {
+    width: 5px;
+    height: 5px;
+  }
+  .interactive__amount {
+    margin: 46px 0 30px;
+  }
+  .interactive__radio {
+    justify-content: space-around;
+  }
+  .radio__item {
+    height: 22px;
+  }
+  .radio__input {
+    margin: 0;
+  }
+}
+@media (max-width: 410px) {
+  .feed__icon{
+    margin: 0 5px;
+  }
+  .feed__vidget {
+    height: 112px;
+    width: 151px;
+  }
+  .interactive__text {
+    font-size: inherit;
+  }
 }
