--- a/online-zoo/assets/styles/global.css
+++ b/online-zoo/assets/styles/global.css
@@ -29,9 +29,9 @@ body {
   border-radius: 25px;
   background: linear-gradient(113.96deg, #f9804b 1.49%, #fe9013 101.44%);
   padding: 0;
-  width: 18.7rem;
+  width: 298px;
   max-width: 100%;
-  height: 3.4rem;
+  height: 54px;
   color: #ffffff;
   font-weight: 500;
   font-size: 1rem;
@@ -339,6 +339,9 @@ body {
     font-weight: 500;
     line-height: 22px;
   }
+  .header__nav .nav__link:last-child {
+    margin-right: 0;
+  }
 }
 @media (max-width: 840px) {
   .header {
@@ -364,15 +367,42 @@ body {
     border: none;
     margin: 0px;
   }
+}
+@media (max-width: 320px) {
+  .header__logo {
+    width: 47px;
+  }
+  .logo__text {
+    font-size: 12px;
+  }
+  .logo::before {
+    top: 10px;
+    left: 20px;
+  }
 
-
+}
   /* ------------Adaptive footer ---------- */
-@media (max-width:1200px) {
-  .footer__nav > .nav__link:last-child {
-    margin-left: 48px;
-    padding-right: 88px;
+
+@media (max-width: 1200px) {
+  .footer__nav {
+    justify-content: center;
+    margin-left: 85px;
+  }
+  .footer__nav .nav__link:last-child {
+    padding: 0;
+  }
+  .nav__link {
+    margin: 0 22px;
+  }
+  .footer__logo {
+    margin-bottom: 0px;
   }
 }
+@media (max-width: 1000px) {
+  .footer__nav {
+    margin-left: 95px;
+  }
+} 
 @media (max-width: 840px) {
   .footer {
     padding: 12px 0px 12px;
@@ -425,14 +455,23 @@ body {
     font-size: 0;
     margin-bottom: 25px;
   }
+  .footer__nav {
+    margin-left: 0;
+  }
+  .footer__nav .nav__link {
+    padding: 0;
+ }
+  .soc__item {
+    margin-right: -10px;
+  }
 }
-}
+
 
 @media (max-width: 570px) {
   .container {
     padding: 0 10px;
     }
-  }
+}
 
 @media (max-width: 500px) {
   .footer {
@@ -478,23 +517,35 @@ body {
     justify-content: space-between;
   }
   .footer__nav > .nav__link {
-    margin-right: 25px;
     font-weight: normal;
+    margin: 0;
   }
   .footer__nav > .nav__link:last-child {
     margin-right: 0px;
   }
   .footer__soc {
     display: flex;
+    justify-content: center;
     top: 47px;
-    right: 50%;
+    right: 47%;
     transform: translateX(50%);
   }
   .soc__item {
     margin-bottom: 0px;
-    margin-right: 30px;
+    margin: 0 10px;
   }
   .footer__title {
     text-align: center;
   }
+}
+
+@media (max-width: 370px) {
+  .footer__btn {
+    width: 298px;
+    height: 54px;
+  }
+  .footer .container {
+    padding: 0 10px;
+  }
+
 }
